# PChorAnalyzer

./: .gitignore  CMakeLists.txt  Dockerfile.testrunner  README.md
choreographies/: Com.cor  decl.cor  labelCom.cor  mesh.cor  multiCom.cor  multicast.cor  ring.cor  simpleCom.cor
prototype_choreographies/: desc.txt  driver_controller.cor  driver_nodelet_simple.cor  message_filter.cor  message_filter_simple.cor
src/: main.cpp
src/analyzer/: Analyzer.cpp  Analyzer.hpp  AstVisitor.cpp  AstVisitor.hpp  Plugin.cpp
src/analyzer/utils/: CASTAnalyzerUtils.cpp  CASTAnalyzerUtils.hpp  ContextManager.cpp  ContextManager.hpp
src/analyzer/visitors/: AstVisitor.cpp  AstVisitor.hpp  CASTValidator.cpp  CASTValidator.hpp
src/pchor/: PchorAST.cpp  PchorAST.hpp  PchorFileWrapper.hpp  PchorParser.cpp  PchorParser.hpp  PchorProjection.cpp  PchorProjection.hpp  PchorTokenizer.cpp  PchorTokenizer.hpp  pchor.cpp  pchor.hpp  pchorParser.cpp
src/pchor/ast/: PchorAST.cpp  PchorAST.hpp  PchorProjection.cpp  PchorProjection.hpp
src/pchor/parser/: PchorFileWrapper.hpp  PchorParser.cpp  PchorParser.hpp  PchorTokenizer.cpp  PchorTokenizer.hpp
test/: ex.txt  runTest.sh  test  test.cpp  testdecl.cpp
test/Circle/: test.cor  test.cpp
test/IterExamples/: iter.cor  iter2.cor  iter3.cor  simple.cor
test/buyerSeller/: test.cor  test.cpp  test.hpp
test/buyerSellerTest/: desc.txt  fail.cpp  failValidate.cpp  incorrect_receive.cpp  test.cor  test.cpp  test.hpp
test/circleTest/: circle.cor  correct_test.cpp  desc.txt  missing_receive.cpp
test/multiCastTest/: desc.txt  finite.cor  infinite.cor  missing_ifhandling.cpp  test.cor  test.cpp
test/multiComTest/: correct_test.cpp  desc.txt  fail.cpp  test.cor  test.cpp
test/ringBarrierTest/: desc.txt  finite.cor  nested.cor  outofbounds.cor  test.cor  test.cpp
test/simpleAckTest/: desc.txt  fail.cpp  test.cor  test.cpp
test/simpleComTest/: correct_test.cpp  desc.txt  fail.cpp  test.cpp  wrong_channel.cpp  wrong_identifier.cor
test/streamingProtTest/: desc.txt  test.cor  test.cpp
test/streamingProtocol/: test.cor  test.cpp
